feat(Dockerfile): Оптимизация образа